<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Book</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="by_date">By date</string>
    <string name="by_month">By month</string>
    <string name="by_year">By year</string>
    <string name="select_date">Select date</string>
    <string name="select_month">Select month</string>
    <string name="select_year">Select year</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="add_new">New</string>
    <string name="save">Save</string>
    <string name="category_name">Category name</string>
    <string name="title_activity_add_new_income_category">New Income Category</string>
    <string name="title_activity_edit_new_income_category">Edit Income Category</string>
    <string name="title_activity_add_new_income">New Income</string>

    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title_activity_list_category">Income Category</string>

    <string name="choose">Choose</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="exist_item_inform">Your item already exist</string>
    <string name="required">is required</string>
    <string name="close">Close</string>
    <string name="cannot_delete_category">Can not delete category</string>
    <string name="remaining">Remaining</string>

    <string name="detail">Detail</string>
    <string name="back">Back</string>

    <string name="hello_world">Hello world!</string>
    <string name="language">Language</string>
    <string name="sync">Sync</string>
    <string name="title_activity_sync">Sync</string>
    <string name="complete_sync">Sync is completed</string>
    <string name="dont_have_permission">Do not have permission to access device</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="connected">Connected to device</string>
    <string name="connecting">Connecting to device</string>
    <string name="waiting">waiting...</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_desc">Please login to use Money Book. Do not have account please press Register</string>
    <string name="error_update">Error in updating</string>
    <string name="posting">Posting data...</string>
    <string name="getting">Getting data...</string>
    <string name="done">Done</string>
    <string name="no_desc">No description</string>

</resources>
