<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.nghiatrinh.thuchi.activitys.DetailIncomeExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layout_detail">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="#ffffff"
            android:onClick="goToDetailIncome"
            android:background="@drawable/tab_btn_blue"
            android:id="@+id/btn_income_detail"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:onClick="goToBack"
            android:background="@drawable/tab_btn_blue"
            android:id="@+id/btn_back_detail"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="#ffffff"
            android:onClick="goToDetailExpense"
            android:background="@drawable/tab_btn_blue"
            android:id="@+id/btn_expense_detail"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_detail"
        android:layout_below="@+id/layout_detail"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="@dimen/title_list"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/contents_detail"
        android:layout_below="@+id/title_detail"
        android:layout_margin="10dp">
    </FrameLayout>
</RelativeLayout>
